--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head><meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+button, select {
+  padding: 12px 16px;
+  font-size: 1rem;
+}
+
+<meta name="mobile-web-app-capable" content="yes">
+
 <meta name="mobile-web-app-capable" content="yes">
 
   <meta charset="utf-8" />
