--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head><meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
+  let autoSim = setInterval(simulatePriceChange, 15000);
+if(Math.abs(pct) >= 10){
+  const el = addAlert(`${card.name} moved ${pct}% — $${old.toFixed(2)} → $${neu.toFixed(2)}`);
+  el.classList.add('big-change');
+}
+<link rel="icon" href="favicon.png" type="image/png">
+
 button, select {
   padding: 12px 16px;
   font-size: 1rem;
