--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+ <!doctype html>
+<html lang="en">
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  
   <!-- Mobile app mode -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
 
-  <title>Card Price Chart - Demo</title>
+  <title>Card Price Tracker - Demo</title>
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.png" type="image/png">
@@ -17,17 +20,6 @@
   <link rel="stylesheet" href="style.css" />
 
   <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-
-<meta name="mobile-web-app-capable" content="yes">
-
-<meta name="mobile-web-app-capable" content="yes">
-
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Card Price Chart - Demo</title>
-  <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -64,6 +56,8 @@
     </footer>
   </div>
 
+  <!-- Your JS -->
   <script src="script.js"></script>
 </body>
 </html>
+
